
 - Fixed man page naming for `nutdrv_siemens-sitop(.8)` (dash vs. underscore)
   to match the driver program name. Follow-up from slightly botched renaming
   in original contribution. [PR #545]

 - The `configure` script should now try harder to report specifically
   the "purelib" location as `PYTHON*_SITE_PACKAGES`. [#1209]

 - Upstreamed reference packaging recipes (DEB, RPM) from the 42ITy project
   which can be used with OBS (Open Build Service by SUSE), both to support
   end-user testing of NUT development, and to have a yet another NUT CI farm
   player with a distinct opinion on code quality. Many of the changes listed
   above happened thanks to this effort, and due to concerns raised by OBS
   build agents with various Linux distributions. [#1209, #1316, #3144]

 - Revised use of NUT macros for USB Vendor IDs listed in different drivers,
   so the names would be better exposed in generated `udev.rules` and similar
   files. [PR #3139]


Release notes for NUT 2.8.4 - what's new since 2.8.3
----------------------------------------------------

 - Bug fixes for fallout possible due to "fightwarn" effort in 2.8.0+:
   * In `usbhid-ups` sources, introduced optional `HU_FLAG_PARAM_REQUIRED` for
     `setvar()` or `instcmd()` handling (and a `HU_TYPE_CMD_PARAM_REQUIRED`
     shortcut) for setting in the mapping table flags, to specify variables
     or instant commands that require an argument (either from caller or a
     non-`NULL` default in the run-time table after device data discovery);
     if the flag is not set, a zero value is assumed. Incomplete code was a
     regression of NUT v2.8.3 causing some instant commands to fail. [#2860,
     #2955]

 - Fix fallout of development in NUT v2.8.0 and/or v2.8.1 and/or v2.8.2 and/or
   v2.8.3:
   * Fixed a regression in recipes of NUT v2.8.3 release (as compared to
     v2.8.2), where `configure --with-docs=all` no longer failed a run
     of the `configure` script when some of the required rendering tools